# rag_langchain

./: .gitignore  README.md  converted.md  main.py  pyproject.toml  streamlit_ollama.py  test.py  test.txt  test2.py
